--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,3 +10,8 @@
 .App__container {
   text-align: center;
 }
+.App__message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
